--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container {
+  @apply max-w-screen-2xl mx-auto px-4;
+}
+
+.gradient-text {
+  @apply bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-transparent bg-clip-text;
+}
