--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,5 +7,5 @@
 }
 
 .gradient-text {
-  @apply bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-transparent bg-clip-text;
+  @apply bg-gradient-to-r from-secondary-light via-secondary-main to-secondary-light1 text-transparent bg-clip-text;
 }
